--- a/CalculatePosition_AllTests/.project
+++ b/CalculatePosition_AllTests/.project
@@ -3,7 +3,7 @@
 	<name>CalculatePosition_AllTests</name>
 	<comment></comment>
 	<projects>
-		<project>RINEX2NMEA_StaticLib</project>
+		<project>RINEX</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
