--- a/RINEX2NMEA/.project
+++ b/RINEX2NMEA/.project
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RINEX2NMEA</name>
+	<name>RINEXanalyzer</name>
 	<comment></comment>
 	<projects>
-		<project>RINEX2NMEA_StaticLib</project>
+		<project>RINEX</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
