--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
+#OS junk files
+[Tt]humbs.db
+*.DS_Store
 
-#ignore thumbnails created by windows
-Thumbs.db
-#Ignore files build by Visual Studio
-*.obj
+#Visual Studio files
+*.[Oo]bj
 *.exe
 *.pdb
 *.user
 *.aps
 *.pch
 *.vspscc
+*.vssscc
 *_i.c
 *_p.c
 *.ncb
@@ -16,15 +18,34 @@ Thumbs.db
 *.tlb
 *.tlh
 *.bak
-*.cache
+*.[Cc]ache
 *.ilk
 *.log
-[Bb]in
-[Dd]ebug*/
 *.lib
 *.sbr
+*.sdf
+ipch/
 obj/
+[Bb]in
+[Dd]ebug*/
 [Rr]elease*/
+Ankh.NoLoad
+
+#InstallShield
+[Ss]ingle[Ii]mage/
+[Dd][Vv][Dd]-5/
+[Ii]nterm/
+
+#Tooling
 _ReSharper*/
+*.resharper
 [Tt]est[Rr]esult*
-.metadata
+
+#Project files
+[Bb]uild/
+
+#Subversion files
+.svn
+
+# Office Temp Files
+~$*
