--- a/RINEXanalyzer/RINEXanalyzer.vcxproj.filters
+++ b/RINEXanalyzer/RINEXanalyzer.vcxproj.filters
@@ -33,4 +33,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="include\GetPot">
+      <Filter>ヘッダー ファイル</Filter>
+    </None>
+  </ItemGroup>
 </Project>
