--- a/RINEX_AllTests/.settings/org.eclipse.cdt.managedbuilder.core.prefs
+++ b/RINEX_AllTests/.settings/org.eclipse.cdt.managedbuilder.core.prefs
@@ -7,7 +7,19 @@ environment/buildEnvironmentInclude/cdt.managedbuild.toolchain.gnu.cygwin.base.1
 environment/buildEnvironmentInclude/cdt.managedbuild.toolchain.gnu.cygwin.base.1769074430/C_INCLUDE_PATH/operation=remove
 environment/buildEnvironmentInclude/cdt.managedbuild.toolchain.gnu.cygwin.base.1769074430/append=true
 environment/buildEnvironmentInclude/cdt.managedbuild.toolchain.gnu.cygwin.base.1769074430/appendContributed=true
+environment/buildEnvironmentInclude/cdt.managedbuild.toolchain.gnu.cygwin.base.474246327/CPATH/delimiter=;
+environment/buildEnvironmentInclude/cdt.managedbuild.toolchain.gnu.cygwin.base.474246327/CPATH/operation=remove
+environment/buildEnvironmentInclude/cdt.managedbuild.toolchain.gnu.cygwin.base.474246327/CPLUS_INCLUDE_PATH/delimiter=;
+environment/buildEnvironmentInclude/cdt.managedbuild.toolchain.gnu.cygwin.base.474246327/CPLUS_INCLUDE_PATH/operation=remove
+environment/buildEnvironmentInclude/cdt.managedbuild.toolchain.gnu.cygwin.base.474246327/C_INCLUDE_PATH/delimiter=;
+environment/buildEnvironmentInclude/cdt.managedbuild.toolchain.gnu.cygwin.base.474246327/C_INCLUDE_PATH/operation=remove
+environment/buildEnvironmentInclude/cdt.managedbuild.toolchain.gnu.cygwin.base.474246327/append=true
+environment/buildEnvironmentInclude/cdt.managedbuild.toolchain.gnu.cygwin.base.474246327/appendContributed=true
 environment/buildEnvironmentLibrary/cdt.managedbuild.toolchain.gnu.cygwin.base.1769074430/LIBRARY_PATH/delimiter=;
 environment/buildEnvironmentLibrary/cdt.managedbuild.toolchain.gnu.cygwin.base.1769074430/LIBRARY_PATH/operation=remove
 environment/buildEnvironmentLibrary/cdt.managedbuild.toolchain.gnu.cygwin.base.1769074430/append=true
 environment/buildEnvironmentLibrary/cdt.managedbuild.toolchain.gnu.cygwin.base.1769074430/appendContributed=true
+environment/buildEnvironmentLibrary/cdt.managedbuild.toolchain.gnu.cygwin.base.474246327/LIBRARY_PATH/delimiter=;
+environment/buildEnvironmentLibrary/cdt.managedbuild.toolchain.gnu.cygwin.base.474246327/LIBRARY_PATH/operation=remove
+environment/buildEnvironmentLibrary/cdt.managedbuild.toolchain.gnu.cygwin.base.474246327/append=true
+environment/buildEnvironmentLibrary/cdt.managedbuild.toolchain.gnu.cygwin.base.474246327/appendContributed=true
