--- a/RINEXanalyzer/RINEXanalyzer.vcxproj
+++ b/RINEXanalyzer/RINEXanalyzer.vcxproj
@@ -77,7 +77,6 @@
     <LibraryPath>$(ProjectDir)Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(ProjectDir)include;$(ProjectDir)..\RINEX;$(IncludePath)</IncludePath>
     <LibraryPath>$(ProjectDir)..\Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
@@ -123,6 +122,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
